# tabrepo

./: .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt  ruff.toml  setup.py  tabrepo.md
.github/workflows/: pytest-pytest.yml
autogluon_zeroshot/constants/: model_constants.py
autogluon_zeroshot/contexts/: __init__.py  _context_fetcher.py  _subcontext_utils.py  context.py  context_2022_10_13.py  context_2022_12_11_bag.py  context_2023_02_27_bag_208.py  context_2023_03_19_bag_289.py  context_2023_07_25.py  context_2023_08_21.py  context_2023_08_22_toy.py  context_artificial.py  subcontext.py  utils.py
autogluon_zeroshot/loaders/: __init__.py  _download.py  _results.py
autogluon_zeroshot/metrics/: _fast_log_loss.py  _fast_roc_auc.py  bench_utils.py
autogluon_zeroshot/portfolio/: _portfolio_cv.py  zeroshot_selection.py
autogluon_zeroshot/repository/: __init__.py  evaluation_repository.py  evaluation_repository_zeroshot.py  repository.py  time_utils.py  utils.py
autogluon_zeroshot/simulation/: config_generator.py  configuration_list_scorer.py  dense_utils.py  ensemble_selection_config_scorer.py  filter_dataset_correlation.py  repository.py  sim_output.py  sim_runner.py  sim_utils.py  simulation_context.py  single_best_config_scorer.py  tabular_predictions.py
autogluon_zeroshot/utils/: __init__.py  cache.py  loop_utils.py  parallel_for.py  rank_utils.py  result_utils.py
data/configs/: configs_catboost.json  configs_fastai.json  configs_ftt.json  configs_knn.json  configs_lightgbm.json  configs_lr.json  configs_nn_torch.json  configs_rf.json  configs_tabpfn.json  configs_xgboost.json  configs_xt.json
data/metadata/: task_metadata_244.csv  task_metadata_289.csv  task_metric_names.csv
docs/: README.md  zs_cheatsheet.drawio
examples/: README.md  TabRepo_Reproducibility.ipynb  context_dl.py  exec.py  inspect_alt_500.py  run_quickstart.py  run_quickstart_from_scratch.py  run_quickstart_new_config.py  run_quickstart_tabarena_toy.py  run_tabarena_alt_1400.py  run_tabarena_realmlp_simple.py  temp_script.py
examples/!old/: run_quickstart_tabarena_custom_autogluon.py
examples/benchmarking/: run_beta_tabpfn_end_to_end.py  run_quickstart_tabarena.py  (+2 more)
fasteval/: pyproject.toml
fasteval/fasteval/: elo_utils.py  tabarena.py
scripts/: __init__.py  analyse_similarity_selection.py  benchmark_repo.py  benchmark_tabpred.py  cache_tabarena_to_s3.py  dataset_analysis.py  evaluate_ensemble.py  evaluate_simulation.py  figure-mockup.ipynb  generate_latex_table_system_comparison.py  hyperparameter_importance.py  package_analysis.py  run_download_zeroshot_pred_proba.py  run_evaluate_config.py  run_generate_all_configs.py  run_generate_all_configs_v2.py  run_generate_amlb_config.py  run_method_comparison.py  run_shrink_result_disk_size.py  run_sim.py  run_simulate_zs_ensemble.py  run_simulate_zs_single_best.py  run_simulate_zs_single_best_bagged.py  show_repository_stats.py  snippet.py  zeroshot_all_analysis.ipynb
scripts/tabflow/: Dockerfile_SM  evaluate.py  evaluate_old.py  launch_jobs.py  method_configs.yaml  pyproject.toml  utils.py
scripts/tabflow/configs/: method_configs.yaml
scripts/tabflow/docker/: Dockerfile_SM  build_docker.sh
scripts/tabflow/src/tabflow/: evaluate.py  launch_jobs.py  utils.py
tabarena/: pyproject.toml
tabflow/: pyproject.toml
tabflow/configs/: configs_lightgbm_demo.yaml  method_configs.yaml  method_realmlp.yaml
tabflow/docker/: .dockerignore  Dockerfile_SM  README_mitra.md  build_docker.sh
tabflow/metadata/: task_metadata_tabarena51.csv  task_metadata_tabarena60.csv  task_metadata_tabarena61.csv
tabflow/scripts/: cache_tabarena_openml_tasks_to_s3.py  run_evaluate_lightgbm_demo.py  run_evaluate_linear_model.py  run_jobs_lightgbm_demo.py  run_jobs_linear_model.py  run_jobs_mitra_prateek_example_2025_06_05.py  s3_downloader.py
tabflow/src/tabflow/: evaluate.py
tabflow/tabflow/cli/: download.py  evaluate.py  launch_jobs.py
tabflow/tabflow/core/: resource_manager.py
tabflow/tabflow/utils/: constants.py  logging_utils.py  s3_utils.py  utils.py
tabflow_slurm/: README.md  run_setup_slurm_jobs.py  run_tabarena_experiment.py  setup_slurm_base.py  submit_template.sh
tabrepo/: __init__.py
tst/: test_cache.py  test_dense.py  test_elo_utils.py  test_ensemble.py  test_evaluate_baselines.py  test_impute.py  test_metrics.py  test_no_root_imports.py  test_normalized_scorer.py  test_parallel_for.py  test_portfolio_similarity.py  test_rank_scorer.py  test_repository.py  test_repository_collection.py  test_repository_utils.py  test_roc_auc_cpp.py  test_subcontext.py  test_tabular_predictions.py  test_zeroshot_configs.py
(+616 files in other folders)
