[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabflow"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.36",
    "sagemaker>=2.239",
    "pyyaml>=6.0.2",
    "tabarena",
    "autogluon",
]

[project.scripts]
tabflow = "tabflow.cli.launch_jobs:main"
tabflow-download = "tabflow.cli.download:main"


[tool.setuptools]
package-dir = {}
packages = ["tabflow", "tabflow.cli", "tabflow.core", "tabflow.utils"]
