[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabflow"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "boto3",
    "sagemaker",
    "pyyaml",
    "tabrepo",
    "autogluon-bench",
    "autogluon-benchmark",
    "autogluon",
]

[project.scripts]
tabflow = "tabflow.launch_jobs:main"


[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tabflow"]
